--- a/server/package.json
+++ b/server/package.json
@@ -1,22 +1,33 @@
 {
-  "name": "server",
+  "name": "nano-cc-compiler-server",
   "version": "1.0.0",
+  "description": "Backend server for Nano CC Compiler with lexical analysis support",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
+    "clean": "rimraf lexical/*.exe lexical/*.c lexical/parseTable.txt error.txt output.exe",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "compiler",
+    "c",
+    "cpp",
+    "lexical-analysis",
+    "express",
+    "node"
+  ],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "fs-extra": "^11.2.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "rimraf": "^5.0.5"
   }
 }
