--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "devDependencies": {
     "concurrently": "^8.2.2",
     "rimraf": "^5.0.5"
+  },
+  "dependencies": {
+    "uuid": "^11.1.0"
   }
 }
