--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nano-cc-compiler-server",
   "version": "1.0.0",
-  "description": "Backend server for Nano CC Compiler with lexical analysis support",
+  "description": "Windows-based backend server for Nano CC Compiler with lexical analysis support",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -9,7 +9,7 @@
     "clean": "rimraf lexical/*.exe lexical/*.c lexical/parseTable.txt error.txt output.exe",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "node -e \"require('child_process').exec('dot -V', (e, so, se) => {if(e){console.warn('WARNING: Graphviz (dot) is not installed. Please install it from https://graphviz.gitlab.io/download/');}})\"",
-    "prepare": "echo 'NOTE: This project requires Graphviz (dot) to be installed and available in your PATH.'"
+    "prepare": "echo 'NOTE: This project requires Windows-specific tools: Graphviz (dot), GCC, Lex, win_bison, and Git Bash to be installed and available in your PATH.'"
   },
   "keywords": [
     "compiler",
@@ -33,7 +33,8 @@
     "rimraf": "^5.0.5"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=14.0.0",
+    "os": "win32"
   },
   "optionalDependencies": {
     "graphviz": "*"
