--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "clean": "rimraf lexical/*.exe lexical/*.c lexical/parseTable.txt error.txt output.exe",
+    "clean": "rimraf lexical/*.exe lexical/*.c lexical/parseTable lexical/symbolTable lexical/constantTable syntax/*.exe syntax/*.txt syntax/*.dot syntax/*.png syntax/*.output semantic/*.exe semantic/symbolTable semantic/constantTable semantic/parsedTable error.txt output.exe",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "node -e \"require('child_process').exec('dot -V', (e, so, se) => {if(e){console.warn('WARNING: Graphviz (dot) is not installed. Please install it from https://graphviz.gitlab.io/download/');}})\"",
     "prepare": "echo 'NOTE: This project requires Windows-specific tools: Graphviz (dot), GCC, Lex, win_bison, and Git Bash to be installed and available in your PATH.'"
